<resources>
    <string name="app_name">Stage Manager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title"><![CDATA[<h3>HERE ARE YOUR PROJECTS</h3>]]></string>
    <string name="project_id"><![CDATA[<b>Project ID:</b>]]></string>
    <string name="project_name">Project Name</string>
    <string name="music_piece">Music Piece</string>
    <string name="deadline">Deadline</string>
    <string name="description">Description</string>
    <string name="actors">Actors</string>
    <string name="formations">Formations</string>
    <string name="formation">Formation</string>
    <string name="formation_name">Formation Name</string>
    <string name="_0">0</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_project">Delete project</string>
    <string name="add_formation">Add Formation</string>
    <string name="create">Create</string>
</resources>