...
        <variable
            name="clickListener"
            type="com.example.stagemanager.mainview.projectlist.ProjectEntityListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coinstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="24sp"
        android:onClick="@{() -> clickListener.onClick(project) }">

        <TextView
            android:id="@+id/list_item_project_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/project_name"
...
