...
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/project_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:text="@{projectDetailViewModel.project.description}" />
                </LinearLayout>

...
                        android:layout_height="wrap_content"
                        android:text="@string/music_piece"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/project_music_piece"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/music_piece"
                        android:text="@{projectDetailViewModel.project.songUsed}" />

                </LinearLayout>
...
